[chapter-02] 2.3.1 install gulp-babel
- command: npm install --save-dev gulp-babel

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "babel-preset-es2017": "^6.24.1",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0"
   }
 }
